logs/dag_id=dag_w_postgres_v1/run_id=manual__2023-08-08T07:18:37.888990+00:00/task_id=create_table_in_postgres/attempt=1.log
[2023-08-08T07:18:39.099+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_w_postgres_v1.create_table_in_postgres manual__2023-08-08T07:18:37.888990+00:00 [queued]>
[2023-08-08T07:18:39.105+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_w_postgres_v1.create_table_in_postgres manual__2023-08-08T07:18:37.888990+00:00 [queued]>
[2023-08-08T07:18:39.106+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 6
[2023-08-08T07:18:39.117+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_table_in_postgres> on 2023-08-08 07:18:37.888990+00:00
[2023-08-08T07:18:39.122+0000] {standard_task_runner.py:57} INFO - Started process 2121 to run task
[2023-08-08T07:18:39.126+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_w_postgres_v1', 'create_table_in_postgres', 'manual__2023-08-08T07:18:37.888990+00:00', '--job-id', '1094', '--raw', '--subdir', 'DAGS_FOLDER/dag_postgresql.py', '--cfg-path', '/tmp/tmpva8gou3k']
[2023-08-08T07:18:39.128+0000] {standard_task_runner.py:85} INFO - Job 1094: Subtask create_table_in_postgres
[2023-08-08T07:18:39.178+0000] {task_command.py:410} INFO - Running <TaskInstance: dag_w_postgres_v1.create_table_in_postgres manual__2023-08-08T07:18:37.888990+00:00 [running]> on host e3ce6cb94b48
[2023-08-08T07:18:39.258+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Zack' AIRFLOW_CTX_DAG_ID='dag_w_postgres_v1' AIRFLOW_CTX_TASK_ID='create_table_in_postgres' AIRFLOW_CTX_EXECUTION_DATE='2023-08-08T07:18:37.888990+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-08-08T07:18:37.888990+00:00'
[2023-08-08T07:18:39.260+0000] {sql.py:265} INFO - Executing: 
            CREATE TABLE if not exists dag_runs {
                dt date,
                dag_id character varying,
                primary key  (dt, dag_id)
            }
        
[2023-08-08T07:18:39.270+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-08-08T07:18:39.319+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-08-08T07:18:39.329+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE if not exists dag_runs {
                dt date,
                dag_id character varying,
                primary key  (dt, dag_id)
            }
        , parameters: None
[2023-08-08T07:18:39.332+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 277, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 2:             CREATE TABLE if not exists dag_runs {
                                                        ^

[2023-08-08T07:18:39.343+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_w_postgres_v1, task_id=create_table_in_postgres, execution_date=20230808T071837, start_date=20230808T071839, end_date=20230808T071839
[2023-08-08T07:18:39.353+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 1094 for task create_table_in_postgres (syntax error at or near "{"
LINE 2:             CREATE TABLE if not exists dag_runs {
                                                        ^
; 2121)
[2023-08-08T07:18:39.378+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-08-08T07:18:39.395+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
